--- a/landingpage.css
+++ b/landingpage.css
@@ -9,8 +9,8 @@ body{
         background-image: image-set(
           url("./images/Background.png") 1x,
           url("./images/Background@2x.png") 2x);
-      
-
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
       }
 
 .row{
@@ -38,7 +38,7 @@ body{
 /*middle main text*/
 .text-center{
     padding: 15px;
-    margin-top: 80px;
+    margin-top: 220px;
 
 }
 .text-center h1{
@@ -64,10 +64,13 @@ body{
 }
 
 /*trip-detail section */
+
+
 .trip-details {
- margin-top: 200px;
- 
- padding-left: 20%;
+ margin-top: 430px;
+ padding-bottom: 0px;
+padding-left: 25%;
+padding-right: 25%;
 }
 .trip-details button{
     white-space: nowrap;
@@ -105,23 +108,26 @@ body{
 
 
 .image-gallery{
-    background-color: white;
+    /* background-color: white;
     border-radius: 10px;
-    margin-top: 80px;
+    margin: 40px 40px 40px 40px;
+    background-filter: blur(50px); */
 }
 
 /*svg styling for animation*/
-/* .Bottom {
+.Bottom {
     position: absolute;
     overflow: visible;
-    
-  
+    width: 100%;
+    height: 100%;
     z-index: -1;
+    padding-left: -20px;
 }
 #Bottom {
     filter: blur(50px);
     fill: rgba(245,250,255,1);
-} */
+    padding-left: -20px;
+}
 /* :not(svg) {
     transform-origin: 0px 0px;
 } */
