--- a/landingpage.css
+++ b/landingpage.css
@@ -119,12 +119,12 @@ padding-right: 25%;
     position: absolute;
     overflow: visible;
     width: 100%;
-    height: 100%;
+    height: 600px;
     z-index: -1;
     padding-left: -20px;
 }
 #Bottom {
-    filter: blur(50px);
+    filter: blur(60px);
     fill: rgba(245,250,255,1);
     padding-left: -20px;
 }
