--- a/landingpage.css
+++ b/landingpage.css
@@ -206,7 +206,64 @@ body {
 }
 
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+    
+  }
+  .open>.dropdown-menu {
+    display: block;
+}
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: white;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
+    box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
+    
+}
 
+  .dropdown-item{
+    padding:10px;
+    font-size: 20px;
+    cursor: pointer;
+    font-family: Forma DJR Text;
+    transition: 0.3s;
+
+  }
+
+  .dropdown-item:hover{
+    background-color: rgb(216, 216, 216);
+    font-weight: 550;
+    
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 20px 30px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 .image-gallery {
     /* background-color: white;
     border-radius: 10px;
