--- a/landingpage.css
+++ b/landingpage.css
@@ -247,8 +247,9 @@ body {
   }
 
   .dropdown-item:hover{
-    background-color: rgb(216, 216, 216);
-    font-weight: 550;
+    background-color: #5c28ea;
+    font-weight: 500;
+    color: white;
     
   }
   
